include/dss_capi.h

    /*
    kvar output for the active generator. Updates power factor based on present kW.
    */
    DSS_CAPI_DLL void Generators_Set_kvar(double Value);
    /*
    kW output for the active generator. kvar is updated for current power factor
    */
    DSS_CAPI_DLL void Generators_Set_kW(double Value);
    /*
    Power factor (pos. = producing vars). Updates kvar based on present kW value.
    */
    DSS_CAPI_DLL void Generators_Set_PF(double Value);
    /*
    Number of phases
    */
    DSS_CAPI_DLL void Generators_Set_Phases(int32_t Value);
    /*
    Number of Generator Objects in Active Circuit
    */
    DSS_CAPI_DLL int32_t Generators_Get_Count(void);
    /*
    Get/Set active Generator by index into generators list.  1..Count
    */
    DSS_CAPI_DLL int32_t Generators_Get_idx(void);
    /*
    Get/Set active Generator by index into generators list. 1..Count
    */
    DSS_CAPI_DLL void Generators_Set_idx(int32_t Value);
    /*
    Generator Model
    */
    DSS_CAPI_DLL int32_t Generators_Get_Model(void);
    /*
    Generator Model
    */
    DSS_CAPI_DLL void Generators_Set_Model(int32_t Value);
    /*
    kVA rating of the generator
    */
    DSS_CAPI_DLL double Generators_Get_kVArated(void);
    /*
    KVA Rating of the generator
    */
    DSS_CAPI_DLL void Generators_Set_kVArated(double Value);
    /*
    vmaxpu for Generator model
    */
    DSS_CAPI_DLL double Generators_Get_Vmaxpu(void);
    /*
    Vminpu for Generator model
    */
    DSS_CAPI_DLL double Generators_Get_Vminpu(void);
    /*
    Vmaxpu for generator model
    */
    DSS_CAPI_DLL void Generators_Set_Vmaxpu(double Value);
    /*
    Vminpu for Generator model
    */
    DSS_CAPI_DLL void Generators_Set_Vminpu(double Value);